--- a/Duality.gg/Base.lproj/Main.storyboard
+++ b/Duality.gg/Base.lproj/Main.storyboard
@@ -1,24 +1,140 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Duality_gg" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GT7-Ub-3i5">
+                                <rect key="frame" x="145.5" y="380" width="123" height="30"/>
+                                <state key="normal" title="Sign In with riot id"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YH1-Ia-Oxo">
+                                <rect key="frame" x="111" y="468" width="192" height="30"/>
+                                <state key="normal" title="Continue with out logging in"/>
+                                <connections>
+                                    <segue destination="v2G-2s-qMn" kind="presentation" modalPresentationStyle="fullScreen" id="sCB-Bx-Rrh"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="YH1-Ia-Oxo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="63z-Ao-KpI"/>
+                            <constraint firstItem="GT7-Ub-3i5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wUI-Gh-kL5"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-4" y="96"/>
+        </scene>
+        <!--Calculator-->
+        <scene sceneID="jtp-qM-UgD">
+            <objects>
+                <viewController id="xmh-TT-FEB" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zqI-zf-BFp">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="G7O-0Q-MBf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Calculator" image="sum" catalog="system" id="a5Y-5G-eA5"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="68n-C6-bIO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1716" y="961"/>
+        </scene>
+        <!--Find Player-->
+        <scene sceneID="btE-cP-8SJ">
+            <objects>
+                <viewController id="z0I-Ib-P2M" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mmU-Hb-sef">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="oxs-lH-y2t"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Find Player" image="magnifyingglass" catalog="system" id="7KG-nK-ypa"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YYM-N4-ZDT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2768" y="961"/>
+        </scene>
+        <!--Leaderbord-->
+        <scene sceneID="ggV-RD-sZJ">
+            <objects>
+                <viewController id="k3l-82-kXt" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9gX-lD-ycc">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="SFb-FK-R7Q"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Leaderbord" image="textformat.123" catalog="system" id="xJ4-Ux-w0f"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tZO-lt-wMK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1803" y="-208"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="bHn-3W-1lI">
+            <objects>
+                <viewController id="j2X-Xm-uVF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ph7-Hz-hkj">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="KD6-Ip-0K3"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" image="person.fill" catalog="system" id="BOP-mN-2jQ"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zOL-K4-sSP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2881" y="177"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="vRb-hN-eMz">
+            <objects>
+                <tabBarController id="v2G-2s-qMn" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="I6x-Wh-8lG"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IMM-wE-b8G">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="k3l-82-kXt" kind="relationship" relationship="viewControllers" id="Czi-rQ-dp0"/>
+                        <segue destination="z0I-Ib-P2M" kind="relationship" relationship="viewControllers" id="C4s-kH-1a7"/>
+                        <segue destination="xmh-TT-FEB" kind="relationship" relationship="viewControllers" id="PkG-Pl-Kna"/>
+                        <segue destination="j2X-Xm-uVF" kind="relationship" relationship="viewControllers" id="y6p-nb-EXP"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="STM-Ni-sdi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="913" y="96"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
+        <image name="sum" catalog="system" width="102" height="128"/>
+        <image name="textformat.123" catalog="system" width="128" height="62"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
