--- a/Duality.gg/Base.lproj/LaunchScreen.storyboard
+++ b/Duality.gg/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,29 +15,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duality.gg" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3vg-ge-geO">
-                                <rect key="frame" x="135" y="427.5" width="144" height="41"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Duality.gg.png" translatesAutoresizingMaskIntoConstraints="NO" id="qnx-lo-hOG">
+                                <rect key="frame" x="30" y="413" width="354" height="105"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="354" id="ccB-km-0n1"/>
+                                    <constraint firstAttribute="height" constant="105" id="szC-6q-zvp"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Planets.png" translatesAutoresizingMaskIntoConstraints="NO" id="YH8-5P-XBf">
+                                <rect key="frame" x="-23" y="245" width="460" height="149"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="149" id="JUt-D3-cLl"/>
+                                    <constraint firstAttribute="width" secondItem="YH8-5P-XBf" secondAttribute="height" multiplier="460:149" id="XZj-Dp-6wN"/>
+                                    <constraint firstAttribute="width" constant="460" id="cMG-3w-BRB"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.062745098040000002" green="0.094117647060000004" blue="0.13725490200000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="3vg-ge-geO" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Jhx-B6-5wf"/>
-                            <constraint firstItem="3vg-ge-geO" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="y8F-l0-Zcp"/>
+                            <constraint firstItem="qnx-lo-hOG" firstAttribute="top" secondItem="YH8-5P-XBf" secondAttribute="bottom" constant="19" id="CIE-PF-DLj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="qnx-lo-hOG" secondAttribute="bottom" constant="344" id="Eza-sf-1sF"/>
+                            <constraint firstItem="qnx-lo-hOG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="VkA-J8-iyQ"/>
+                            <constraint firstItem="YH8-5P-XBf" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="jlc-aC-aSb"/>
+                            <constraint firstItem="qnx-lo-hOG" firstAttribute="top" secondItem="YH8-5P-XBf" secondAttribute="bottom" constant="19" id="nB0-eR-eUi"/>
+                            <constraint firstItem="YH8-5P-XBf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="201" id="pFq-7J-Weo"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="Duality.gg.png" width="622" height="76"/>
+        <image name="Planets.png" width="524" height="304"/>
     </resources>
 </document>
