--- a/Duality.gg/Base.lproj/Main.storyboard
+++ b/Duality.gg/Base.lproj/Main.storyboard
@@ -84,14 +84,28 @@
                     <view key="view" contentMode="scaleToFill" id="9gX-lD-ycc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leaderboard.png" translatesAutoresizingMaskIntoConstraints="NO" id="oNq-Vg-AMA">
+                                <rect key="frame" x="-8.5" y="6" width="431" height="212"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="oNq-Vg-AMA" secondAttribute="height" multiplier="431:212" id="6pD-VR-MfR"/>
+                                    <constraint firstAttribute="height" constant="212" id="bht-o1-rfr"/>
+                                    <constraint firstAttribute="width" constant="431" id="m8k-Xx-EbD"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="SFb-FK-R7Q"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.08235294118" green="0.10980392160000001" blue="0.1450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="oNq-Vg-AMA" firstAttribute="centerX" secondItem="9gX-lD-ycc" secondAttribute="centerX" id="JA9-Dj-TUb"/>
+                            <constraint firstItem="oNq-Vg-AMA" firstAttribute="top" secondItem="9gX-lD-ycc" secondAttribute="top" constant="6" id="XPa-4B-ELq"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Leaderbord" image="textformat.123" catalog="system" id="xJ4-Ux-w0f"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tZO-lt-wMK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1803" y="-208"/>
+            <point key="canvasLocation" x="1802.8985507246377" y="-208.25892857142856"/>
         </scene>
         <!--Profile-->
         <scene sceneID="bHn-3W-1lI">
@@ -133,6 +147,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Leaderboard.png" width="1125" height="144"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="sum" catalog="system" width="102" height="128"/>
