--- a/Duality.gg/Base.lproj/Main.storyboard
+++ b/Duality.gg/Base.lproj/Main.storyboard
@@ -142,7 +142,7 @@
         <!--Profile-->
         <scene sceneID="bHn-3W-1lI">
             <objects>
-                <viewController id="j2X-Xm-uVF" sceneMemberID="viewController">
+                <viewController id="j2X-Xm-uVF" customClass="ProfileViewController" customModule="Duality_gg" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ph7-Hz-hkj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -155,6 +155,51 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zOL-K4-sSP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2810" y="210"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="dOJ-eY-S9C">
+            <objects>
+                <viewController storyboardIdentifier="LoginViewController" id="dmV-nA-Cdi" customClass="LoginViewController" customModule="Duality_gg" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VOu-BD-x8R">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="profile_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="D4K-up-auS">
+                                <rect key="frame" x="-286" y="5" width="986" height="886"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Duality.gg.png" translatesAutoresizingMaskIntoConstraints="NO" id="Gue-3x-2Jx">
+                                <rect key="frame" x="87" y="293" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eNO-9A-nkK">
+                                <rect key="frame" x="91" y="424" width="232" height="48"/>
+                                <color key="backgroundColor" red="1" green="0.27450980390000002" blue="0.3294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="Kd7-S1-6zj"/>
+                                    <constraint firstAttribute="width" secondItem="eNO-9A-nkK" secondAttribute="height" multiplier="29:6" id="NDM-O3-HaS"/>
+                                    <constraint firstAttribute="width" constant="232" id="qZ0-Wg-QCL"/>
+                                </constraints>
+                                <state key="normal" title="Sign In with riot id">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Planets.png" translatesAutoresizingMaskIntoConstraints="NO" id="9Vu-ly-yyB">
+                                <rect key="frame" x="-55" y="245" width="524" height="80"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="1nu-G4-PLC"/>
+                        <color key="backgroundColor" red="0.08235294118" green="0.10980392160000001" blue="0.1450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="eNO-9A-nkK" firstAttribute="centerY" secondItem="VOu-BD-x8R" secondAttribute="centerY" id="7PM-NK-GqD"/>
+                            <constraint firstItem="eNO-9A-nkK" firstAttribute="centerX" secondItem="VOu-BD-x8R" secondAttribute="centerX" id="Oeg-gN-2wq"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2vy-pP-apK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3664" y="210"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="vRb-hN-eMz">
@@ -179,9 +224,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Duality.gg.png" width="622" height="76"/>
         <image name="Leaderboard.png" width="1125" height="144"/>
+        <image name="Planets.png" width="524" height="304"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
+        <image name="profile_bg.png" width="1125" height="2436"/>
         <image name="sum" catalog="system" width="102" height="128"/>
         <image name="textformat.123" catalog="system" width="128" height="62"/>
         <systemColor name="systemBackgroundColor">
